feat: improve popup, add tile-content

--- a/src/index.html
+++ b/src/index.html
@@ -20,13 +20,21 @@
 </div>
 
 <div id="popup" class="flex-evenly">
-    <div class="container" id="popup-content-wrapper">
+    <div class="container" id="popup-content">
         <div title="Close" onclick="hidePopup()" id="popup-close">X</div>
-        <div id="popup-content">test</div>
+        <div>
+            <h2 id="popup-title"></h2>
+            <p id="popup-message"></p>
+            <img id="popup-image" src="" alt="">
+        </div>
     </div>
 </div>
 
-
+<footer>
+    <a href="https://github.com/ric03/adventskalender">Github</a>
+    &nbsp; - &nbsp;
+    <a href="image-licenses.html">Images from Unsplash</a>
+</footer>
 
 </body>
 </html>
