feat: add more images, improve styling

--- a/src/image-licenses.html
+++ b/src/image-licenses.html
@@ -1,14 +1,98 @@
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Adventskalender - Image licenses</title>
-</head>>
+</head>
+
 <body>
 <h3>Images from Unsplash</h3>
 
-<span>Photo by <a href="https://unsplash.com/@davidogascon?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">David-Olivier Gascon</a> on <a href="https://unsplash.com/?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span>
+<span>david-olivier-gascon-e9vrm-J192k-unsplash.jpg - Photo by <a
+        href="https://unsplash.com/@davidogascon?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">David-Olivier Gascon</a> on <a
+        href="https://unsplash.com/?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span>
+<br>
+<span>reno-laithienne-aN3PdTgW3tc-unsplash.jpg - Photo by <a
+        href="https://unsplash.com/@renolaithienne?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Reno Laithienne</a> on <a
+        href="https://unsplash.com/s/photos/yoda?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span>
+<br>
+<span>free-to-use-sounds-Vkt3uDeDkdg-unsplash.jpg - Photo by <a
+        href="https://unsplash.com/@freetousesoundscom?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Free To Use Sounds</a> on <a
+        href="https://unsplash.com/s/photos/stop?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span>
+<br>
+<span>harsh-gupta-nVDB1IGq64s-unsplash.jpg -  Photo by <a
+        href="https://unsplash.com/@imharsh081?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Harsh Gupta</a> on <a
+        href="https://unsplash.com/s/photos/walking?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span>
+<br>
+<span>giovanni-ribeiro-B1hX9TE7HDY-unsplash.jpg - Photo by <a
+        href="https://unsplash.com/@by_giovanni?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Giovanni Ribeiro</a> on <a
+        href="https://unsplash.com/s/photos/beetle?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span>
+<br>
+<span>roberto-nickson-5PQn41LFsQk-unsplash.jpg - Photo by <a
+        href="https://unsplash.com/@rpnickson?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Roberto Nickson</a> on <a
+        href="https://unsplash.com/s/photos/christmas?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span>
+<br>
+<span>annie-spratt-Z9Ds4w141i4-unsplash.jpg - Photo by <a
+        href="https://unsplash.com/@anniespratt?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Annie Spratt</a> on <a
+        href="https://unsplash.com/s/photos/christmas-tree-red?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span>
+<br>
+<span>neil-rosenstech-KG-9TUrAFsg-unsplash.jpg - Photo by <a
+        href="https://unsplash.com/@neilrst?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Neil Rosenstech</a> on <a
+        href="https://unsplash.com/s/photos/monster?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span>
+<br>
+<span>valdemaras-d-Nx2FTJfKX68-unsplash.jpg - Photo by <a
+        href="https://unsplash.com/@deko_lt?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Valdemaras D.</a> on <a
+        href="https://unsplash.com/s/photos/cliff?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span>
+<br>
+<span>joseph-gonzalez-zcUgjyqEwe8-unsplash.jpg - Photo by <a
+        href="https://unsplash.com/@miracletwentyone?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Joseph Gonzalez</a> on <a
+        href="https://unsplash.com/s/photos/food?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span>
+<br>
+<span>wout-vanacker-l4HBYkURqvE-unsplash.jpg - Photo by <a
+        href="https://unsplash.com/@woutvanacker?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Wout Vanacker</a> on <a
+        href="https://unsplash.com/s/photos/burn?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span>
+<br>
+<span>nattu-adnan-vvHRdOwqHcg-unsplash.jpg - Photo by <a
+        href="https://unsplash.com/@reallynattu?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Nattu Adnan</a> on <a
+        href="https://unsplash.com/s/photos/maldives?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span>
+<br>
+<span>l-a-l-a-s-z-a-S0hS0HfH_B8-unsplash.jpg - Photo by <a
+        href="https://unsplash.com/@lalasza?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">L A L A S Z A</a> on <a
+        href="https://unsplash.com/s/photos/rome?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span>
+<br>
+<span>annie-spratt-HZuJfZlXVQY-unsplash.jpg - Photo by <a
+        href="https://unsplash.com/@anniespratt?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Annie Spratt</a> on <a
+        href="https://unsplash.com/s/photos/present?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span>
+<br>
+<span>jose-ignacio-garcia-zajaczkowski-ZkBjtrG7aYg-unsplash.jpg - Photo by <a
+        href="https://unsplash.com/@jigz94?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">José Ignacio García Zajaczkowski</a> on <a
+        href="https://unsplash.com/s/photos/parrot?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span>
+<br>
+<span>wil-stewart-UErWoQEoMrc-unsplash.jpg - Photo by <a
+        href="https://unsplash.com/@wilstewart3?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Wil Stewart</a> on <a
+        href="https://unsplash.com/s/photos/alcohol?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span>
+<br>
+<span>spencer-davis-hi1Iq4x_ldM-unsplash.jpg - Photo by <a
+        href="https://unsplash.com/@spencerdavis?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Spencer Davis</a> on <a
+        href="https://unsplash.com/s/photos/drunk-driving?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span>
+<br>
+<span>mike-blank-L23AkTe3y20-unsplash.jpg - Photo by <a
+        href="https://unsplash.com/@mikeblank?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Mike Blank</a> on <a
+        href="https://unsplash.com/?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span>
+<br>
+<span>sule-makaroglu-BTOPcWXBCGg-unsplash.jpg - Photo by <a
+        href="https://unsplash.com/@sulemakaroglu?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">ŞULE MAKAROĞLU</a> on <a
+        href="https://unsplash.com/?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span>
+<br>
+<span>mick-haupt-S5Lz8y95m1A-unsplash.jpg - Photo by <a
+        href="https://unsplash.com/@rocinante_11?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Mick Haupt</a> on <a
+        href="https://unsplash.com/s/photos/funny?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span>
+<br>
+<span>pawel-czerwinski-6lQDFGOB1iw-unsplash.jpg - Photo by <a
+        href="https://unsplash.com/@pawel_czerwinski?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Paweł Czerwiński</a> on <a
+        href="https://unsplash.com/s/photos/abstract?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span>
+<br>
 </body>
 </html>
