--- a/src/index.html
+++ b/src/index.html
@@ -34,9 +34,9 @@
     <div class="container popup-content" id="forbidden-content">
         <div title="Close" onclick="hideForbidden()" class="popup-close" id="forbidden-close">X</div>
         <div>
-            <h2 id="forbidden-title">403</h2>
-            <p class="popup-message" id="forbidden-message">Nice try.</p>
-            <img class="popup-image" id="forbidden-image" src="img/matthew-feeney-IBGqZJUDghM-unsplash.jpg" alt="donuts">
+            <h1 id="forbidden-title">ups</h1>
+            <p> Aufgrund eines technischen Fehlers können Sie aktuell keine Türchen öffnen.</p>
+            <p> Bitte versuchen Sie es zu einem späteren Zeitpunkt erneut. </p>
         </div>
     </div>
 </div>
