feat: add date-lock toggle button

--- a/src/index.html
+++ b/src/index.html
@@ -40,7 +40,7 @@
         </div>
     </div>
 </div>
-
+<button onclick="toggleDateLock()" id="toggle-date-lock">Disable Date Lock</button>
 <footer>
     <a href="https://github.com/ric03/adventskalender">Github</a>
     &nbsp; - &nbsp;
