feat: hide 'date-lock'-toggle button

--- a/src/index.html
+++ b/src/index.html
@@ -39,7 +39,7 @@
         </div>
     </div>
 </div>
-<button id="toggle-date-lock">Disable Date Lock</button>
+<button id="toggle-date-lock" class="d-none">Disable Date Lock</button>
 <footer>
     <a href="https://github.com/ric03/adventskalender">Github</a>
     &nbsp; - &nbsp;
